Add schema and null checks. Create main.py file.

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 1000 rows\n",
+      "OK rows: 1000, Rejected rows: 0000\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "def run(file_name:str, print_lines:bool=False) -> None:\n",
@@ -49,7 +58,7 @@
     "\n",
     "# Call the function for a test\n",
     "file_path = \"./data/vehicles_complex.json\"\n",
-    "run(file_path, print_lines=True)"
+    "run(file_path, print_lines=False)"
    ]
   },
   {
@@ -69,8 +78,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# later make it date OR address\n",
-    "VALID_FIELDS = [\"license_plate\", \"make_model\", \"year\", \"registered_name\", \"registered_address\", \"registered_date\"]"
+    "#required fields\n",
+    "VALID_FIELDS = [\"license_plate\", \"make_model\", \"year\", \"registered_name\", \"registered_address\", \"registered_date\"]\n",
+    "\n",
+    "def check_schema(row, required_fields=VALID_FIELDS) -> bool:\n",
+    "    '''\n",
+    "    Checks if a json row or dict contains all required fields. Missing fields will cause KeyError exception\n",
+    "\n",
+    "    Args:\n",
+    "        row (dict): data row\n",
+    "        fields (set, optional): set of required fields\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: True if all fields present\n",
+    "\n",
+    "    Raises:\n",
+    "        KeyError: If required fields are missing\n",
+    "    '''\n",
+    "    # Loop through fields to make sure they are all present. If any are missing, raise KeyError.\n",
+    "    for field in required_fields:\n",
+    "        if field not in row:\n",
+    "            raise KeyError(f'Missing required field: {field}')\n",
+    "    return True\n",
+    "\n",
+    "def null_check(row:dict, required_fields=VALID_FIELDS) -> bool:\n",
+    "    '''\n",
+    "    Checks the row to ensure no null values. Fields containing null values cause a ValueError\n",
+    "\n",
+    "    Args:\n",
+    "        row (dict): data row\n",
+    "        fields (set, optional): set of required fields\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: True if none of the fields contain Null values \n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If required fields contain none.\n",
+    "    '''\n",
+    "    #Loop through field values to make sure that no values are Null. If they are, return ValueError.\n",
+    "    for field in required_fields:\n",
+    "        if row[field] is None:\n",
+    "            raise ValueError(f\"{field} cannot be Null.\")\n",
+    "    return True\n"
    ]
   }
  ],
