add address regex parser

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +122,48 @@
     "        if row[field] is None:\n",
     "            raise ValueError(f\"{field} cannot be Null.\")\n",
     "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def transform_address(row:dict) -> bool:\n",
+    "    \"\"\"\n",
+    "    Parses the address into street_address, city, state, zip fields. Invalid address cause a ValueError exception.\n",
+    "\n",
+    "    Args:\n",
+    "        row (dict): data row\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: True if address is in valid US address format; otherwise False\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: Unknown address format.\n",
+    "    \"\"\"\n",
+    "    # regular expression (regex) to match a US address composed of street_address, city, state, zip\n",
+    "    # this regex uses Named Capturing Group feature of regex to assign a name to a matching portion of the string\n",
+    "    # the syntax is (?<group_name>...) where ... contains the matching regex for this group\n",
+    "    address_regex = r\"(?P<street_address>[a-zA-Z0-9 .]+)\\n(?P<city>[a-zA-Z0-9 ]+), (?P<state>[A-Z]{2}) (?P<zip>[0-9]{5})\"\n",
+    "    pattern = re.compile(address_regex)\n",
+    "    # match address using regex\n",
+    "    result = pattern.match(row[\"registered_address\"])\n",
+    "    if result:\n",
+    "        # if a possible match found. assign fields based on regex matching named groups\n",
+    "        row[\"street_address\"] = result.group(\"street_address\")\n",
+    "        row[\"city\"] = result.group(\"city\")\n",
+    "        row[\"state\"] = result.group(\"state\")\n",
+    "        row[\"zip\"] = result.group(\"zip\")\n",
+    "        # delete the original address field\n",
+    "        del row[\"registered_address\"]\n",
+    "        return True\n",
+    "    else:\n",
+    "        address = row[\"registered_address\"].strip().replace(\"\\n\", \", \")\n",
+    "        raise ValueError(f\"Unknown address format: {address}\")"
    ]
   }
  ],
